<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general">

        <EditTextPreference
            android:defaultValue="@string/pref_def_logged_as"
            android:key="pref_edit_text_loggedAs"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/coming_soon"
            android:title="@string/logged_as" />

        <EditTextPreference
            android:defaultValue="0"
            android:editable="false"
            android:key="pref_edit_text_rewardAmount"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/click_to_see"
            android:title="@string/points_amount" />
        <EditTextPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="0"
            android:editable="false"
            android:key="pref_edit_text_version"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/click_to_see"
            android:title="@string/app_version" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/look" >

        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="@string/DefaultTheme"
            android:entries="@array/colors"
            android:entryValues="@array/colors_key"
            android:key="list_preference_main_colors"
            android:summary="@string/main_color_scheme"
            android:title="@string/main_color" />

        <ListPreference
            android:defaultValue="@string/DefaultOpenAllTheme"
            android:entries="@array/colors"
            android:entryValues="@array/colors_key"
            android:key="list_preference_open_all_colors"
            android:summary="@string/open_all_color_scheme"
            android:title="@string/open_all_colors" />

        <ListPreference
            android:defaultValue="@string/DefaultBrowsingTheme"
            android:entries="@array/colors"
            android:entryValues="@array/colors_key"
            android:key="list_preference_browsing_colors"
            android:summary="@string/browsing_color_scheme"
            android:title="@string/browsing_color" />

        <ListPreference
            android:defaultValue="@string/DefaultPickTheme"
            android:entries="@array/colors"
            android:entryValues="@array/colors_key"
            android:key="list_preference_picking_colors"
            android:summary="@string/pick_color_scheme"
            android:title="@string/pick_color" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notifications">

        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_switch_sync_all"
            android:onClick="notify_switch"
            android:summary="@string/coming_soon"
            android:title="@string/notifications" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="pref_switch_sync_all"
            android:key="pref_switch_sync_catalog_ends"
            android:summary="@string/ending_catalog_info"
            android:title="@string/ending_catalog" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="pref_switch_sync_all"
            android:key="pref_switch_sync_all_new_client"
            android:summary="@string/new_client_notifications"
            android:title="@string/new_client" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="pref_switch_sync_all"
            android:key="pref_switch_sync_new_orders"
            android:summary="@string/new_order_notifications"
            android:title="@string/new_order" />

    </PreferenceCategory>

    <PreferenceCategory
        android:summary="@string/pref_category_data"
        android:title="@string/data">

        <EditTextPreference
            android:defaultValue="@string/pref_def_data_base_exist"
            android:key="pref_edit_text_data_base_clean"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/deleting_data_base"
            android:title="@string/deleting_data_base_info" />

    </PreferenceCategory>


</PreferenceScreen>