<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_import_export"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbarStyle="outsideInset">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_padding"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/default_padding"
            android:text="@string/import_export_DB_title"
            android:textAlignment="center"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/import_export_DB_information"
            android:textAlignment="center"
            android:textSize="@dimen/default_sub_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_ie_button_db_import"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/import_db" />

            <Button
                android:id="@+id/dialog_ie_button_db_export"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/export_db" />

        </LinearLayout>


        <ProgressBar
            android:id="@+id/pb"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/default_margin"
            android:padding="@dimen/default_padding"
            android:text="@string/import_export_folder"
            android:textAlignment="center"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/import_export_table_info"
            android:textAlignment="center"
            android:textSize="@dimen/default_sub_text_size" />

        <RadioGroup
            android:id="@+id/dialog_ie_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.09"
            android:orientation="vertical"
            android:paddingTop="@dimen/default_padding">

            <RadioButton
                android:id="@+id/dialog_ie_radio_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/default_padding"
                android:text="@string/items" />

            <RadioButton
                android:id="@+id/dialog_ie_radio_persons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/default_padding"
                android:text="@string/clients" />

            <RadioButton
                android:id="@+id/dialog_ie_radio_catalogs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/default_padding"
                android:text="@string/catalogs"
                android:textAllCaps="false" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_ie_button_folder_import"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/import_db" />

            <Button
                android:id="@+id/dialog_ie_button_folder_export"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/export_db" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/default_padding"
            android:text="@string/import_export_hint"
            android:textAlignment="center" />

    </LinearLayout>

</ScrollView>
