<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:padding="@dimen/default_padding"
        android:text="@string/delete"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/default_text_size"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:padding="@dimen/default_padding"
        android:text="@string/delete_notify"
        android:textSize="@dimen/default_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/dialog_button_yes"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/default_padding"
            android:layout_weight="1"
            android:background="?attr/colorAccent"
            android:fontFamily="sans-serif"
            android:text="@string/agree"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/dialog_button_no"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_padding"
            android:layout_weight="1"
            android:background="?attr/colorAccent"
            android:fontFamily="sans-serif"
            android:text="@string/disagree"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>